components/security/authelia/authelia.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forward-auth
  namespace: authelia
spec:
  forwardAuth:
    address: "http://authelia.authelia.svc.cluster.local/api/authz/forward-auth"
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: "http://authelia.authelia.svc.cluster.local/api/authz/forward-auth"
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
